--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Desafio 2</title>
+	<title>gigeo</title>
 
 
     <!-- Agregar link de fontawesome -->
